--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/src/assets/logo.png" />
+    <link rel="icon" type="image" href="/src/assets/Images/MP LOGO1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website</title>
+    <title>Manish Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Allura&family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Caveat:wght@400..700&family=Gilda+Display&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Jost:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Hanunoo&family=Permanent+Marker&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rochester&family=Sofia&family=Yatra+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
